syntax = "proto3";

option java_multiple_files = true;
option java_package = "jrb.grpc.blazeds";
option java_outer_classname = "GetKlantbeeldProto";
option objc_class_prefix = "HLW";

package jrb.grpc;

service GetKlantbeeld {
	rpc getKlantbeeld(SelectKlantbeeldMsg) returns (KlantbeeldMsg);
}	

message KlantbeeldMsg {
	int32 klantId = 1;
	string voornaam = 2;
	string achternaam = 3;
	int64 geboorteDatum = 4;
	GeslachtMsg geslacht = 5;
	string saldo = 6;
	AdresMsg adres = 7;
	repeated PensioenAanspraakMsg aanspraken = 8;	
}


enum GeslachtMsg{
	MAN = 0;
	VROUW = 1;
}



message SelectKlantbeeldMsg {
	int32 klantId = 1;
	string achternaam = 2;	
}


message PensioenAanspraakMsg {
	PensioenAanspraakTypeMsg type = 1;
	string uitkering = 2;
	int64 einddatum = 3;	
	oneof PensioenAanspraak {
		VroegPensioenAanspraakMsg vroegPensioenAanspraak = 4;
		WeduwePensioenAanspraakMsg weduwePensioenAanspraak= 5;
	}
}

message VroegPensioenAanspraakMsg {
	int32 looptijd = 1;
}

message WeduwePensioenAanspraakMsg {
	int64 partnerOverleden = 1;
}

message AdresMsg {
	string adres = 1;
	string postcode = 2;
	string plaats = 3;	
}


enum PensioenAanspraakTypeMsg{
	TYPE_A = 0;
	TYPE_B = 1;
}
